--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Honeycomb": {
+    "ServiceName": "my-app",
+    "ApiKey": "",
+    "EnableLocalVisualizations": true
+  }
 }
